@@ -25,9 +25,9 @@ require_once("lib/pan_php_framework.php");
 $minimumVersion = "1.5.13";
 $maximumVersion = "2.1.0";
 
-// Check version of PAN-PHP-framework for compatibility
+// Check version of PAN-OS-PHP for compatibility
 if( ! PH::frameworkVersion_isGreaterThan($minimumVersion) || PH::frameworkVersion_isGreaterThan($maximumVersion) )
-    derr("AppID Toolbox requires PAN-PHP-framework version  > {$minimumVersion} and  < $maximumVersion while current version is ".PH::frameworkVersion() . " [".PH::frameworkInstalledOS()."]"."\n");
+    derr("AppID Toolbox requires PAN-OS-PHP version  > {$minimumVersion} and  < $maximumVersion while current version is ".PH::frameworkVersion() . " [".PH::frameworkInstalledOS()."]"."\n");
 
 if( strtoupper(substr(PHP_OS, 0, 3)) === 'WIN' )
 {
