@@ -4,7 +4,7 @@ PH::print_stdout("");
 PH::print_stdout("*********** START OF SCRIPT ".basename(__FILE__)." ************" );
 PH::print_stdout("");
 
-// load PAN-PHP-FRAMEWORK library
+// load PAN-OS-PHP library
 require_once("lib/pan_php_framework.php");
 require_once "utils/lib/UTIL.php";
 
@@ -74,7 +74,7 @@ PH::print_stdout("");
  * * $location : string with location name or undefined if not provided on CLI
  * * $sub : DeviceGroup or VirtualSystem found after looking from cli 'location' argument
  * * $apiMode : if config file was downloaded from API directly
- * * $args : array with all CLI arguments processed by PAN-PHP-FRAMEWORK
+ * * $args : array with all CLI arguments processed by PAN-OS-PHP
  * *
  */
 
