@@ -21,7 +21,7 @@
 
 
 set_include_path(dirname(__FILE__) . '/../' . PATH_SEPARATOR . get_include_path());
-// load PAN-PHP-FRAMEWORK library
+// load PAN-OS-PHP library
 require_once dirname(__FILE__)."/../lib/pan_php_framework.php";
 
 PH::print_stdout("");
